Localization - partial views
Adding resource strings for all partial views which have not been localized.

--- a/Web/Restaurant.Web/Views/Review/AllReviews.cshtml
+++ b/Web/Restaurant.Web/Views/Review/AllReviews.cshtml
@@ -3,7 +3,7 @@
 @model PagedItemsViewModel<ReviewViewModel>
 
 @{
-    this.ViewData["Title"] = SL["ALL_REVIEWS"];
+    this.ViewData["Title"] = SL["АLL_REVIEWS"];
 }
 
 <partial name="_HeroPartial" />
