--- a/Web/Restaurant.Web/Views/Shared/Components/CartTotal/Default.cshtml
+++ b/Web/Restaurant.Web/Views/Shared/Components/CartTotal/Default.cshtml
@@ -4,5 +4,5 @@
 }
 else
 {
-    <a class="btn btn-primary py-2 px-4" asp-area="Identity" asp-page="/Account/Login"><i class="fa-solid fa-cart-shopping"></i> Order now</a>
+    <a class="btn btn-primary py-2 px-4" asp-area="Identity" asp-page="/Account/Login"><i class="fa-solid fa-cart-shopping"></i> @SL["ORDER"]</a>
 }
