--- a/Web/Restaurant.Web/Views/Shared/_ModalPartial.cshtml
+++ b/Web/Restaurant.Web/Views/Shared/_ModalPartial.cshtml
@@ -2,12 +2,12 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="staticBackdropLabel">Are you sure you want to delete this?</h5>
+                <h5 class="modal-title" id="staticBackdropLabel">@SL["ARE_YOU_SURE"]</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-danger" onclick="deleteForm.submit()">Delete</button>
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">@SL["CLOSE"]</button>
+                <button type="button" class="btn btn-danger" onclick="deleteForm.submit()">@SL["DELETE"]</button>
             </div>
         </div>
     </div>
