--- a/Web/Restaurant.Web/Views/Shared/_PagingPartial.cshtml
+++ b/Web/Restaurant.Web/Views/Shared/_PagingPartial.cshtml
@@ -1,9 +1,9 @@
 ﻿@using Restaurant.Web.ViewModels.Paging
 @model IPagingViewModel
-<nav aria-label="...">
+<nav aria-label="..." class="pb-3">
     <ul class="pagination justify-content-center">
         <li class="page-item @if (!Model.HasPreviousPage) { <text>disabled</text> }">
-            <a class="page-link" asp-action="All" asp-route-id="@Model.PreviousPageNumber">Previous</a>
+            <a class="page-link" asp-action="All" asp-route-id="@Model.PreviousPageNumber">@SL["PREVIOUS"]</a>
         </li>
         @for (int i = Model.PageNumber - 2; i < Model.PageNumber; i++)
         {
@@ -26,7 +26,7 @@
             }
         }
         <li class="page-item @if (!Model.HasNextPage) { <text>disabled</text> }">
-            <a class="page-link" asp-action="All" asp-route-id="@Model.NextPageNumber">Next</a>
+            <a class="page-link" asp-action="All" asp-route-id="@Model.NextPageNumber">@SL["NEXT"]</a>
         </li>
     </ul>
 </nav>
