--- a/Web/Restaurant.Web/Views/Address/AddAddress.cshtml
+++ b/Web/Restaurant.Web/Views/Address/AddAddress.cshtml
@@ -1,23 +1,22 @@
 ﻿@using Restaurant.Web.ViewModels.Address
 @model AddressViewModel
 @{
-    this.ViewData["Title"] = "Add a new address";
+    this.ViewData["Title"] = SL["ADD_NEW_ADDRESS"];
 }
 
 <partial name="_HeroPartial" />
-<div class="bg-white col-md-8 offset-md-2 wow fadeInUp" data-wow-delay="0.1s">
-    <hr style="color: black; height:3px; opacity:100" />
-    <div class="col-md-10 offset-md-1">
-        <form class="row g-3" method="post">
+<div class="row justify-content-center px-5 pb-3">
+
+    <div class="col-md-8 wow fadeInUp" data-wow-delay="0.1s">
+        <hr style="color: black; height:3px; opacity:100" />
+        <div class="text-danger" asp-validation-summary="ModelOnly"></div>
+        <form class="row g-3 mb-3" method="post">
             <partial name="_AddressViewPartial" model="Model" />
-            <div class="text-danger" asp-validation-summary="ModelOnly"></div>
-            <button type="submit" id="editAddressButton" class="btn btn-primary m-2"><i class="fa-solid fa-check"></i> Save changes</button>
-            <a class="btn btn-primary m-2" asp-controller="Address" asp-action="All"><i class="fa-solid fa-circle-left"></i> Back</a>
-
+            <button type="submit" id="editAddressButton" class="btn btn-primary col-xl-3 ms-2 me-5"><i class="fa-solid fa-check"></i> @SL["SAVE"]</button>
+            <a class="btn btn-primary ms-2 col-xl-3" asp-controller="Address" asp-action="All"><i class="fa-solid fa-circle-left"></i> @SL["BACK"]</a>
         </form>
+
+        <hr style="color: black; height:3px; opacity:100" />
     </div>
-    <hr style="color: black; height:3px; opacity:100" />
 </div>
-
-
 
