--- a/Web/Restaurant.Web/Views/Order/Success.cshtml
+++ b/Web/Restaurant.Web/Views/Order/Success.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Restaurant.Web.ViewModels.Order;
 @model OrderViewModel;
 @{
-    this.ViewData["Title"] = "Your orders";
+    this.ViewData["Title"] = SL["SUCCESS"];
 }
 
 <partial name="_HeroPartial" />
@@ -15,7 +15,7 @@
                 <table align="left" border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width:300px;">
                     <tr>
                         <td align="center" class="mobile-center">
-                            <h1 class="text-success mb-0">Success!</h1>
+                            <h1 class="text-success mb-0">@SL["SUCCESS"]!</h1>
                         </td>
                     </tr>
                 </table>
