--- a/Web/Restaurant.Web/Views/Checkout/Index.cshtml
+++ b/Web/Restaurant.Web/Views/Checkout/Index.cshtml
@@ -1,146 +1,153 @@
-﻿@using Restaurant.Web.ViewModels.Checkout
+﻿@using Microsoft.AspNetCore.Localization
+@using Restaurant.Web.ViewModels.Checkout
+
 @model CheckoutViewModel;
 @{
-    this.ViewData["Title"] = "Checkout";
+    this.ViewData["Title"] = SL["CHECKOUT"];
+    var requestCulture = Context.Features.Get<IRequestCultureFeature>();
 }
 
 <partial name="_HeroPartial" />
 
-<div class="container-fluid pt-5 wow fadeInUp" data-wow-delay="0.1s">
-    <div class="row">
-        <div class="col-lg-8 bg-white border border-3 border-dark rounded-3">
-            <div class="mb-4">
-                <h1 class="text-center font-weight-semi-bold mb-5 mt-4">Billing Address</h1>
+<div class="wow fadeInUp p-5" data-wow-delay="0.1s">
+    <div class="row-cols-lg-2 row g-3">
+        <div class="col">
+            <div class="card border-dark border-3">
+                <div class="card-header bg-dark border-0 text-center">
+                    <h4 class="text-white m-0">@SL["ORDER_DETAILS"]</h4>
+                </div>
+                <div class="card-body">
+                    <h5 class="font-weight-medium mb-3">@SL["PRODUCTS"]</h5>
+                    @foreach (var cartItem in Model.CartItems)
+                    {
+                        <div class="row">
+                            @{ var mealName = requestCulture.RequestCulture.Culture.Name == "en" ? cartItem.Meal.Name : cartItem.Meal.SecondaryName; }
+                            <p class="col-md-6">@cartItem.Quantity x @mealName</p>
+                            <p class="col-md-6 text-start text-md-end fw-bold">@cartItem.ItemTotalPrice $</p>
+                        </div>
+                    }
+                    <hr class="mt-0">
+                    <div class="row">
+                        <h6 class="font-weight-medium col-md-6">@SL["SUBTOTAL"]</h6>
+                        <h6 class="font-weight-medium col-md-6 text-start text-md-end">@Model.SubTotal $</h6>
+                    </div>
+                    <div class="row">
+                        <h6 class="font-weight-medium col-md-6">@SL["SHIPPING"]</h6>
+                        <h6 class="font-weight-medium col-md-6 text-start text-md-end">@Model.ShippingPrice $</h6>
+                    </div>
+                    <div class="card-footer">
+                        <div class="row">
+                            <h5 class="font-weight-medium text-primary col-md-6">@SL["TOTAL_PRICE"]</h5>
+                            <h5 class="font-weight-medium text-primary col-md-6 text-start text-md-end">@Model.TotalPrice $</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+
+        </div>
+        <div class="col mt-3">
+            <div class="border border-3 border-dark rounded-3 col-xl-12 p-3">
+                <h1 class="text-center font-weight-semi-bold">@SL["DELIVERY_ADDRESS"]</h1>
                 @if (!Model.Addresses.Any())
                 {
-                    <h3 class="mt-3 text-center">I'm afraid you don't have any addresses added yet.</h3>
-                    <h3 class="mt-3 text-center">You'll need to <a asp-controller="Address" asp-action="Add">add an address</a> in order to proceed.</h3>
+                    <h3 class="mt-3 text-center">@SL["NO_ADDRESSES_YET"]</h3>
+                    <h3 class="mt-3 text-center">@SL["YOU_NEED_TO"] <a asp-controller="Address" asp-action="Add">@SL["ADD_NEW_ADDRESS"]</a> @SL["PROCEED"]</h3>
                 }
                 else
                 {
                     <form method="post" asp-controller="Order" asp-action="Create" id="CreateOrderForm">
                         <div asp-validation-summary="All"></div>
-                        <div class="col-md-12">
-                            <input type="hidden" id="cartId" name="CartId" value="@Model.Id" />
-                            <input type="hidden" id="addressId" name="addressId" value="0" />
-                            <input type="hidden" id="cartItemsCount" name="CartItemsCount" value="@Model.CartItems.Count()" />
-                            <input type="hidden" id="phoneNumber" name="phoneNumber" value="@Model.PhoneNumber" />
-
-
-
-                            <select class="form-select bg-body" id="addressNames" onchange="GetAddress()">
-                                <option value="Initial">Choose an address...</option>
-                                @foreach (var address in Model.Addresses)
-                                {
-                                    <option value="@address">@address</option>
-                                }
-                            </select>
-                        </div>
-                        <div class="col-md-12">
-                            <label asp-for="@Model.FirstName"></label>
-                            <input asp-for="@Model.FirstName" class="form-control bg-body" disabled>
-                            <span asp-validation-for="@Model.FirstName"></span>
-                        </div>
-                        <div class="col-md-12">
-                            <label asp-for="@Model.LastName"></label>
-                            <input asp-for="@Model.LastName" class="form-control bg-body" disabled>
-                            <span asp-validation-for="@Model.LastName"></span>
-                        </div>
-                        <div class="col-md-12">
-                            <label asp-for="@Model.Email"></label>
-                            <input asp-for="@Model.Email" class="form-control bg-body" disabled>
-                            <span asp-validation-for="@Model.Email"></span>
-                        </div>
-                        <div class="col-md-12">
-                            <label asp-for="@Model.PhoneNumber"></label>
-                            <input asp-for="@Model.PhoneNumber" class="form-control bg-body" disabled>
-                            <span asp-validation-for="@Model.PhoneNumber"></span>
-                        </div>
-                        <div class="col-md-12">
-                            <label>Street</label>
-                            <input class="form-control bg-body" id="street" disabled>
-                        </div>
-                        <div class="col-md-12">
-                            <label>Address line 2</label>
-                            <input class="form-control bg-body" id="addressLine2" disabled>
-                        </div>
-                        <div class="col-md-12">
-                            <label>District</label>
-                            <input class="form-control bg-body" id="district" disabled>
+                        <input type="hidden" id="cartId" name="CartId" value="@Model.Id" />
+                        <input type="hidden" id="addressId" name="addressId" value="0" />
+                        <input type="hidden" id="cartItemsCount" name="CartItemsCount" value="@Model.CartItems.Count()" />
+                        <input type="hidden" id="phoneNumber" name="phoneNumber" value="@Model.PhoneNumber" />
+                        <div class="row">
+                            <div class="col-md-6">
+                                <label asp-for="@Model.FirstName">@SL["DELIVERY_ADDRESS"]</label>
+                                <select class="form-select bg-body" id="addressNames" onchange="GetAddress()">
+                                    <option value="Initial">@SL["CHOOSE_ADDRESS"]</option>
+                                    @foreach (var address in Model.Addresses)
+                                    {
+                                        <option value="@address">@address</option>
+                                    }
+                                </select>
+                            </div>
+                            <div class="col-md-3">
+                                <label asp-for="@Model.FirstName">@SL["FIRST_NAME"]</label>
+                                <input asp-for="@Model.FirstName" class="form-control bg-body" disabled>
+                                <span asp-validation-for="@Model.FirstName"></span>
+                            </div>
+                            <div class="col-md-3">
+                                <label asp-for="@Model.LastName">@SL["LAST_NAME"]</label>
+                                <input asp-for="@Model.LastName" class="form-control bg-body" disabled>
+                                <span asp-validation-for="@Model.LastName"></span>
+                            </div>
                         </div>
                         <div class="row">
-                            <div class="col-md-4">
-                                <label>City</label>
-                                <input class="form-control bg-body" id="city" disabled>
+                            <div class="col-md-6">
+                                <label asp-for="@Model.Email">@SL["EMAIL"]</label>
+                                <input asp-for="@Model.Email" class="form-control bg-body" disabled>
+                                <span asp-validation-for="@Model.Email"></span>
                             </div>
-                            <div class="col-md-4">
-                                <label>Country</label>
-                                <input class="form-control bg-body" id="country" disabled>
-                            </div>
-                            <div class="col-md-4">
-                                <label>Post code</label>
-                                <input class="form-control bg-body" id="postCode" disabled>
+                            <div class="col-md-6">
+                                <label asp-for="@Model.PhoneNumber">@SL["PHONE_NUMBER"]</label>
+                                <input asp-for="@Model.PhoneNumber" class="form-control bg-body" disabled>
+                                <span asp-validation-for="@Model.PhoneNumber"></span>
                             </div>
                         </div>
                     </form>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <label>@SL["STREET"]</label>
+                            <input class="form-control bg-body" id="street" disabled>
+                        </div>
+                        <div class="col-md-6">
+                            <label>@SL["ADR_LINE_2"]</label>
+                            <input class="form-control bg-body" id="addressLine2" disabled>
+                        </div>
+                    </div>
+                    <div class="row mb-3">
+                        <div class="col-md-3">
+                            <label>@SL["DISTRICT"]</label>
+                            <input class="form-control bg-body" id="district" disabled>
+                        </div>
+                        <div class="col-md-3">
+                            <label>@SL["CITY"]</label>
+                            <input class="form-control bg-body" id="city" disabled>
+                        </div>
+                        <div class="col-md-3">
+                            <label>@SL["COUNTRY"]</label>
+                            <input class="form-control bg-body" id="country" disabled>
+                        </div>
+                        <div class="col-md-3">
+                            <label>@SL["ZIP"]</label>
+                            <input class="form-control bg-body" id="postCode" disabled>
+                        </div>
+                    </div>
                 }
             </div>
-        </div>
-
-        <div class="col-lg-4">
-            <div class="card border-dark mb-5">
-                <div class="card-header bg-dark border-0">
-                    <h4 class="text-white m-0">Order Total</h4>
-                </div>
-                <div class="card-body">
-                    <h5 class="font-weight-medium mb-3">Products</h5>
-                    @foreach (var cartItem in Model.CartItems)
-                    {
-                        <div class="d-flex justify-content-between">
-                            <p>@cartItem.Quantity x @cartItem.Meal.Name</p>
-                            <p>@cartItem.ItemTotalPrice $</p>
-                        </div>
-                    }
-                    <hr class="mt-0">
-                    <div class="d-flex justify-content-between mb-3 pt-1">
-                        <h6 class="font-weight-medium">Subtotal</h6>
-                        <h6 class="font-weight-medium">@Model.SubTotal $</h6>
-                    </div>
-                    <div class="d-flex justify-content-between">
-                        <h6 class="font-weight-medium">Shipping</h6>
-                        <h6 class="font-weight-medium">@Model.ShippingPrice$</h6>
-                    </div>
-                </div>
-                <div class="card-footer border-secondary bg-transparent">
-                    <div class="d-flex justify-content-between mt-2">
-                        <h5 class="font-weight-bold">Total</h5>
-                        <h5 class="font-weight-bold">@Model.TotalPrice $</h5>
-                    </div>
-                </div>
-            </div>
-            <div class="card border-dark">
-                <div class="card-header bg-dark border-0">
-                    <h4 class="text-white m-0">Payment</h4>
+            <div class="card border-dark border-3 mt-3">
+                <div class="card-header bg-dark border-0 text-center">
+                    <h4 class="text-white m-0">@SL["PAYMENT"]</h4>
                 </div>
                 <div class="card-body">
                     <div class="form-check form-switch">
                         <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault" disabled>
-                        <label class="form-check-label text-left" for="gridCheck">
-                            PayPal
-                        </label>
+                        <label class="form-check-label" for="gridCheck">@SL["PAYPAL"]</label>
                     </div>
                     <div class="form-check form-switch">
                         <input class="form-check-input" type="checkbox" id="flexSwitchCheckChecked" checked>
-                        <label class="form-check-label" for="flexSwitchCheckChecked">Pay on delivery</label>
+                        <label class="form-check-label" for="flexSwitchCheckChecked">@SL["PAY_ON_DELIVERY"]</label>
                     </div>
                 </div>
-                <div class="card-footer border-secondary bg-transparent">
-                    <button type="button" class="btn btn-lg btn-block btn-primary font-weight-bold mt-3 offset-md-2" onclick="CreateOrderForm.submit()">Place Order</button>
-                </div>
+                <btn class="btn btn-primary text-white px-3" onclick="CreateOrderForm.submit()">@SL["PLACE_ORDER"]</btn>
             </div>
         </div>
     </div>
 </div>
+
 
 @section Scripts
 {
