Bug fix - adding the bulgarian version for the close button of the modal on the menu page

--- a/Web/Restaurant.Web/Views/Menu/AllMeals.cshtml
+++ b/Web/Restaurant.Web/Views/Menu/AllMeals.cshtml
@@ -108,7 +108,7 @@
                 </ul>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" id="btnCloseModal" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-secondary" id="btnCloseModal" data-dismiss="modal">@SL["CLOSE"]</button>
             </div>
         </div>
     </div>
