Renaming the identifiers of the cart and add to cart modals for better core readability

--- a/Web/Restaurant.Web/Views/Cart/Index.cshtml
+++ b/Web/Restaurant.Web/Views/Cart/Index.cshtml
@@ -85,18 +85,18 @@
 </div>
 <!-- Cart End -->
 
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="cartModal" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="modalLabel"></h5>
+                <h5 class="modal-title" id="cartModalLabel"></h5>
             </div>
             <div class="modal-body">
-                <ul id="modalBody">
+                <ul id="cartModalBody">
                 </ul>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" id="btnCloseModal" data-dismiss="modal">@SL["CLOSE"]</button>
+                <button type="button" class="btn btn-secondary" id="cartModalCloseButton" data-dismiss="modal">@SL["CLOSE"]</button>
             </div>
         </div>
     </div>
