--- a/Web/Restaurant.Web/Views/Menu/AllMeals.cshtml
+++ b/Web/Restaurant.Web/Views/Menu/AllMeals.cshtml
@@ -97,18 +97,18 @@
 
 <!--Modal Start-->
 
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="addToCartModal" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="modalLabel"></h5>
+                <h5 class="modal-title" id="addToCartModalLabel"></h5>
             </div>
             <div class="modal-body">
-                <ul id="modalBody">
+                <ul id="addToCartModalBody">
                 </ul>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" id="btnCloseModal" data-dismiss="modal">@SL["CLOSE"]</button>
+                <button type="button" class="btn btn-secondary" id="addToCartModalCloseButton" data-dismiss="modal">@SL["CLOSE"]</button>
             </div>
         </div>
     </div>
