Bug fix - item total label in the cart page was using an incorrect resource string name.

--- a/Web/Restaurant.Web/Views/Cart/Index.cshtml
+++ b/Web/Restaurant.Web/Views/Cart/Index.cshtml
@@ -20,7 +20,7 @@
                         <th>@SL["PRODUCTS"]</th>
                         <th>@SL["PRICE"]</th>
                         <th>@SL["QUANTITY"]</th>
-                        <th>@SL["ITEM_PRICE"]</th>
+                        <th>@SL["ITEM_TOTAL"]</th>
                         <th>@SL["REMOVE"]</th>
                     </tr>
                 </thead>
