--- a/Web/Restaurant.Web/Views/Home/About.cshtml
+++ b/Web/Restaurant.Web/Views/Home/About.cshtml
@@ -24,16 +24,16 @@
                 </div>
             </div>
             <div class="col-lg-6">
-                <h1 class="mb-4">@L["WELCOME_TO"] <i class="fa fa-utensils text-primary me-2"></i>@SL["GOURMET_EXPERIENCE"]</h1>
-                <p class="mb-4">@L["ABOUT_OUR_MISSION"]</p>
-                <p class="mb-4">@L["ABOUT_OUR_POLICY_FIRST"] @L["ABOUT_OUR_POLICY_SECOND"]</p>
+                <h1 class="mb-4">@SL["WELCOME_TO"] <i class="fa fa-utensils text-primary me-2"></i>@SL["GOURMET_EXPERIENCE"]</h1>
+                <p class="mb-4">@SL["ABOUT_OUR_MISSION"]</p>
+                <p class="mb-4">@SL["ABOUT_OUR_POLICY_FIRST"] @SL["ABOUT_OUR_POLICY_SECOND"]</p>
                 <div class="row g-4 mb-4">
                     <div class="col-sm-6">
                         <div class="d-flex align-items-center border-start border-5 border-primary px-3">
                             <h1 class="flex-shrink-0 display-5 text-primary mb-0" data-toggle="counter-up">15</h1>
                             <div class="ps-4">
-                                <p class="mb-0">@L["YEARS_OF"]</p>
-                                <h6 class="text-uppercase mb-0">@L["EXCELLENCE"]</h6>
+                                <p class="mb-0">@SL["YEARS_OF"]</p>
+                                <h6 class="text-uppercase mb-0">@SL["EXCELLENCE"]</h6>
                             </div>
                         </div>
                     </div>
@@ -41,8 +41,8 @@
                         <div class="d-flex align-items-center border-start border-5 border-primary px-3">
                             <h1 class="flex-shrink-0 display-5 text-primary mb-0" data-toggle="counter-up">32</h1>
                             <div class="ps-4">
-                                <p class="mb-0">@L["INCREDIBLE"]</p>
-                                <h6 class="text-uppercase mb-0">@L["DISHES"]</h6>
+                                <p class="mb-0">@SL["INCREDIBLE"]</p>
+                                <h6 class="text-uppercase mb-0">@SL["DISHES"]</h6>
                             </div>
                         </div>
                     </div>
@@ -56,8 +56,8 @@
 <div class="container-xxl pt-5 pb-3">
     <div class="container">
         <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-            <h5 class="section-title ff-secondary text-center text-primary fw-normal">@L["TEAM_MEMBERS"]</h5>
-            <h1 class="mb-5">@L["MASTER_CHEFS"]</h1>
+            <h5 class="section-title ff-secondary text-center text-primary fw-normal">@SL["TEAM_MEMBERS"]</h5>
+            <h1 class="mb-5">@SL["MASTER_CHEFS"]</h1>
         </div>
         <div class="row g-4">
             <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
