Bug fix - select language
Changing the select language partial view to show not the current language but rather the second option available

--- a/Web/Restaurant.Web/Views/Shared/_SelectLanguagePartial.cshtml
+++ b/Web/Restaurant.Web/Views/Shared/_SelectLanguagePartial.cshtml
@@ -20,6 +20,6 @@
           method="post" hidden>
         <input asp-for="@changeCultureString" />
     </form>
-    <button class="btn btn-primary py-2 px-2" style="margin-right: 15px" type="submit" onclick="selectLanguageForm.submit()">@requestCulture.RequestCulture.Culture</button>
+    <button class="btn btn-primary py-2 px-2" style="margin-right: 15px" type="submit" onclick="selectLanguageForm.submit()">@changeCultureString</button>
 </div>
     
