--- a/Web/Restaurant.Web/Views/Shared/_AddressViewPartial.cshtml
+++ b/Web/Restaurant.Web/Views/Shared/_AddressViewPartial.cshtml
@@ -29,12 +29,12 @@
 </div>
 <div class="col-md-4">
     <label asp-for="@Model.City">@SL["CITY"]</label>
-    <input asp-for="@Model.City" class="form-control bg-body" value="">
+    <input asp-for="@Model.City" class="form-control bg-body">
     <span asp-validation-for="@Model.City"></span>
 </div>
 <div class="col-md-4">
     <label asp-for="@Model.Country">@SL["COUNTRY"]</label>
-    <input asp-for="@Model.Country" class="form-control bg-body" value="">
+    <input asp-for="@Model.Country" class="form-control bg-body">
     <span asp-validation-for="@Model.Country"></span>
 </div>
 
